--- a/BulkyBookWeb/BulkyBookWeb.csproj
+++ b/BulkyBookWeb/BulkyBookWeb.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <None Remove="Data\" />
+    <None Remove="Views\Category\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Views\Category\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
