--- a/BulkyBookWeb/BulkyBookWeb.csproj
+++ b/BulkyBookWeb/BulkyBookWeb.csproj
@@ -23,5 +23,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.20" />
   </ItemGroup>
 </Project>
